--- a/frontend/vision_roi/src/App.css
+++ b/frontend/vision_roi/src/App.css
@@ -5,7 +5,7 @@
   text-align: left; /* Align text to the left */
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   color: black;
-  background-color: white;
+  background-color: #9dc2e8;
 }
 
 body {
