--- a/frontend/vision_roi/src/Login.css
+++ b/frontend/vision_roi/src/Login.css
@@ -1,3 +1,4 @@
+/* for login page/component styling */
 .login {
   max-width: 400px;
   margin: 100px auto;
@@ -6,34 +7,6 @@
   border-radius: 10px;
   box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
   text-align: center;
-}
-
-/* Style for input fields */
-.login input {
-  width: 100%;
-  padding: 12px;
-  margin: 12px 0;
-  border: 2px solid #ced4da;
-  border-radius: 6px;
-  font-size: 16px;
-  outline: none;
-  transition: all 0.3s ease-in-out;
-}
-
-/* Input focus effect */
-.login input:focus {
-  border-color: #0056b3;
-  box-shadow: 0 0 8px rgba(0, 86, 179, 0.3);
-}
-
-/* Style for labels */
-.login label {
-  display: block;
-  font-size: 15px;
-  font-weight: 600;
-  text-align: left;
-  margin: 5px 0;
-  color: #333;
 }
 
 /* Login button */
